# Humongous-Engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  build.bat
App/: CMakeLists.txt  main.cpp
Assets/: silly thing.glb
Assets/shaders/: note.txt
Engine/: CMakeLists.txt
Engine/core/inc/: allocator.hpp  asserts.hpp  defines.hpp
Engine/core/src/: allocator.cpp  logger.cpp
Engine/gameplay/inc/: camera.hpp  gameobject.hpp  keyboard_handler.hpp  ui.hpp
Engine/gameplay/inc/ui/: ui.hpp  widget.hpp
Engine/gameplay/src/: camera.cpp  gameobject.cpp  keyboard_handler.cpp  ui.cpp
Engine/gameplay/src/ui/: ui.cpp  widget.cpp
Engine/graphics/inc/: instance.hpp  logical_device.hpp  model.hpp  physical_device.hpp  renderer.hpp  scene.hpp  skybox.hpp  swapchain.hpp  texture.hpp  vulkan_app.hpp  window.hpp
Engine/graphics/inc/abstractions/: buffer.hpp  descriptor_layout.hpp  descriptor_pool.hpp  descriptor_pool_growable.hpp  descriptor_writer.hpp
Engine/graphics/inc/render_systems/: simple_render_system.hpp  skybox_render_system.hpp
Engine/graphics/src/: instance.cpp  logical_device.cpp  material.cpp  model.cpp  physical_device.cpp  render_pipeline.cpp  renderer.cpp  scene.cpp  skybox.cpp  swapchain.cpp  texture.cpp  vulkan_app.cpp  window.cpp
Engine/graphics/src/abstractions/: buffer.cpp  descriptor_layout.cpp  descriptor_pool.cpp  descriptor_pool_growable.cpp  descriptor_writer.cpp
Engine/graphics/src/render_systems/: simple_render_system.cpp  skybox_render_system.cpp
Engine/systems/inc/: asset_manager.hpp  globals.hpp
Engine/systems/src/: asset_manager.cpp  globals.cpp
Engine/utils/inc/: images.hpp  non_copyable.hpp  singleton.hpp
Engine/utils/src/: extra.cpp  images.cpp
Scripts/: CompileAndRun.bat  CompileAndRun.sh  CompileAndRunWindowsDebug.bat  CompileAndRunWindowsRelease.bat  CompileWindowsDebug.bat  CompileWindowsRelease.bat  SetupWindowsDebug.bat  SetupWindowsRelease.bat  _note.txt
shaders/: nothing.frag.glsl  nothing.vert.glsl  pbr.frag.glsl  simple.frag  simple.frag.glsl  simple.vert  simple.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  unlit.frag.glsl
shaders/includes/: input_structures.glsl  shadermaterial.glsl
src/: main.cpp
src/core/inc/: allocator.hpp  asserts.hpp  defines.hpp  logger.hpp
src/core/src/: allocator.cpp  logger.cpp
src/gameplay/inc/: camera.hpp  gameobject.hpp  keyboard_handler.hpp
src/gameplay/src/: camera.cpp  gameobject.cpp  keyboard_handler.cpp  ui.cpp
src/graphics/inc/: instance.hpp  logical_device.hpp  material.hpp  model.hpp  physical_device.hpp  render_pipeline.hpp  renderer.hpp  swapchain.hpp  texture.hpp  vulkan_app.hpp  window.hpp
src/graphics/inc/abstractions/: buffer.hpp  descriptor_layout.hpp  descriptor_pool.hpp  descriptor_pool_growable.hpp  descriptor_writer.hpp
src/graphics/inc/render_systems/: simple_render_system.hpp  skybox_render_system.hpp
src/graphics/src/: instance.cpp  logical_device.cpp  material.cpp  model.cpp  physical_device.cpp  render_pipeline.cpp  renderer.cpp  scene.cpp  swapchain.cpp  texture.cpp  vulkan_app.cpp  window.cpp
src/graphics/src/abstractions/: buffer.cpp  descriptor_layout.cpp  descriptor_pool.cpp  descriptor_pool_growable.cpp  descriptor_writer.cpp
src/graphics/src/render_systems/: simple_render_system.cpp  skybox_render_system.cpp
src/systems/inc/: asset_manager.hpp
src/systems/src/: asset_manager.cpp
src/utils/inc/: extra.hpp  images.hpp
src/utils/src/: extra.cpp  images.cpp
